<resources>
    <string name="app_name">Success</string>
    <string name="action_settings">Settings</string>
    <string name="tab_one">首页</string>
    <string name="tab_two">签到/查询</string>
    <string name="tab_three">师生交流</string>
    <string name="tab_four">学工之家</string>
    <string name="promt_username">输入学号，如：3901140302</string>
    <string name="promt_password">输入密码</string>
    <string name="subimt">登录</string>
    <string name="about">关于我们</string>
    <string name="title_activity_ndialog">ndialog</string>
    <string name="promt_name">输入姓名</string>
    <string name="promt_number">输入学号</string>
    <string name="promt_class">选择班级</string>
    <string name="promt_province">选择生源省份</string>
    <string name="promt_year">选择入学年份</string>
    <string name="search">搜索</string>
    <string name="logout">注销</string>
    <string name="newsUrl">"http://192.168.1.115:8080/studentManagement/news"</string>
    <string name="loginUrl">"http://192.168.1.115:8080/studentManagement/findStudentInA"</string>
    <string name="searchUrl">"http://192.168.1.115:8080/studentManagement/findManyStudentInA"</string>
    <string name="one_title">中南大学学生请假规定</string>
    <string name="two_title">中南大学学生宿舍安全教育及管理规定</string>
    <string name="three_title">中南大学学生违纪处分条例</string>
    <string name="one_part">二、学生请假应事前按有关程序办理请假手续，经批准后方有效。除急病、紧急事情外，不得事后补假。如确需续假，可办理续假手续。请假期满应按时返校，并及时销假。 \n四、寒假、暑假和法定节假日离校，学生应如实向班级负责人、班导师或研究生导师、辅导员报告明确去向，并按学校规定时间离校和返校，不得提前离校或推迟返校。有特殊情况需提前离校或推迟返校者，应先办理请假手续。周末如需外出，应向班级负责人、班导师或研究生导师主动报告明确去向。 </string>
    <string name="one_all">中大学字„2014‟55号 \n
为加强学生的教育和管理，维护学校正常的教学秩序，根据教育部《普通高等学校学生管理规定》（教育部21号令）等文件精神，制定本规定。 \n
一、在我校接受普通高等教育的学生要按时参加学校、二级培养单位及其所属教学科研机构所组织开展的各类教育教学活动。 \n
二、学生请假应事前按有关程序办理请假手续，经批准后方有效。除急病、紧急事情外，不得事后补假。如确需续假，可办理续假手续。请假期满应按时返校，并及时销假。 \n
三、学生应在每学期开学前及时返校，在规定时间内缴清学费、住宿费等有关费用后，及时办理报到注册手续。各二级培养单位应在每学期正式开课当天将学生到校情况报学生工作部（处）或研究生工作部（处）。 \n
四、寒假、暑假和法定节假日离校，学生应如实向班级负责人、班导师或研究生导师、辅导员报告明确去向，并按学校规定时间离校和返校，不得提前离校或推迟返校。有特殊情况需提前离校或推迟返校者，应先办理请假手续。周末如需外出，应向班级负责人、班导师或研究生导师主动报告明确去向。 \n
五、学生因病请假应凭校医院或县级以上医院的诊断证明，按以下程序办理。 \n
（一）病假2天以内，由本人申请，班长签署意见，经班导师或研究生导师同意、辅导员批准，报二级培养单位主管学生工作负责人备案。 \n
（二）病假3-7天，由本人申请，班长签署意见，经班导师或研究生导师、辅导员同意，报二级培养单位主管学生工作负责人批准备案，并由班导师或\n
辅导员告知家长。 \n
（三）病假1-4周，由本人申请，班长签署意见，经班导师或研究生导师、系主任、家长、辅导员同意，报二级培养单位主管教学负责人和学生工作负责人批准并备案。 \n
（四）病假1个月及以上，由本人申请，班长签署意见，经班导师或研究生导师、系主任、家长、辅导员同意，报二级培养单位主管教学负责人和学生工作负责人批准并备案，同时报备学生工作部（处）或研究生工作部（处）。 \n
六、学生因特殊情况需请事假的，应提出申请并附有关证明，且请假时长原则上不得超过2周。 \n
（一）事假半天以内，由本人申请，班长签署意见，经班导师或研究生导师同意、辅导员批准，报二级培养单位主管学生工作负责人备案。 \n
（二）事假1-2天，由本人申请，班长签署意见，经班导师或研究生导师、辅导员同意，报二级培养单位主管学生工作负责人批准备案，并由班导师或辅导员告知家长。 \n
（三）事假3-7天，由本人申请，班长签署意见，经班导师或研究生导师、系主任、家长、辅导员同意，报二级培养单位主管教学和学生工作负责人批准并备案。 \n
（四）事假1-2周，由本人申请，班长签署意见，经班导师或研究生导师、系主任、家长、辅导员同意，报二级培养单位主管教学负责人和学生工作负责人批准并备案，同时报备学生工作部（处）或研究生工作部（处）。 \n
七、学生在学习期间一般不得请假出国探亲。 \n
八、外出实习请假按学校实习管理有关规定执行。 \n
九、学生请假理由应当真实，因理由不实引发不良后果的，责任由学生自行承担，学校将视情节轻重给予批评教育直至纪律处分。 \n
十、一学期内请假时间累计超过总学时三分之一的，应办理休学手续。 \n
十一、班干部、辅导员、任课教师要对学生教育教学活动严格考勤，并 \n
对缺勤学生进行批评教育。学校将按《中南大学学生违纪处分条例》相应条款，对缺勤学生予以严肃处理。 \n
十二、在校学习的其它各类学生，参照本规定实施。 \n
十三、本规定自发布之日起施行，由学生工作部（处）、研究生工作部（处）负责解释。原有规定与本规定不一致的，以本规定为准。\n
</string>
    <string name="two_part">第十一条 学生宿舍内禁止使用以下电器：电炉、电磁炉、电熨斗、电水壶、电热杯、热得快、电梳、电饭煲、电热毯、干鞋器、电怀炉、洗衣机、60Ｗ以上的灯泡，以及未经学校批准的其它电器。一经发现，一律予以没收并通报学院。 \n
第十二条 禁止使用以下各种火源：蜡烛、酒精炉、煤炉、木炭火锅、液化气灶具以及未经学校批准的其它火源。 </string>
    <string name="two_all">
第一章 总 则 \n
第一条 为了加强学生宿舍管理，维护正常的教学和生活秩序，保障学生人身和财物的安全，促进学生身心健康发展，特制定本规定。 \n
第二条 学生宿舍安全教育及管理，要以预防为主，教育先行，明确责任，教管结合，实事求是，妥善处理的原则做好教育、管理工作。 \n
第三条 本规定以原国家教委《普通高等学校学生安全教育管理暂行规定》、《中华人民共和国消防法》、《中南大学学生宿舍管理规定》、《中南大学水电管理条例》为依据，结合我校宿舍安全管理实际情况制定。 \n
第二章 安全教育 \n
第四条 学校成立以校领导为组长，以学校办公室、后勤保障部、保卫处、学工部、研工部、研究生院、继续教育学院负责人为组员的学生宿舍安全工作领导小组。办公室挂靠在保卫处，负责对学生宿舍进行安全教育、培训，对学生宿舍进行安全用电、安全防火等检查，并负责对学生宿舍中违反本规定的行为进行处罚。 \n
第五条 学生宿舍安全工作领导小组，应将对学生进行安全教育作为一项经常性工作，列入学校工作中的重要议事日程，加强领导。学校各部门相互配合，积极开展安全教育，普及安全知识，增强学生的安全意识和法制观念，提高防范能力。 \n
第六条 学生安全教育，特别是学生宿舍安全教育应根据不同专业及青年学生的特点，从学生入校到毕业，在各种教学活动和日常生活中，特别是节假日适时进行。在学生中培养一批义务消防骨干，协助学生宿舍安全工作 \n
领导小组搞好宿舍消防安全的宣传和教育。 \n
第七条 学生宿舍安全工作领导小组应针对各学生宿舍楼栋、各专业及青年学生的特点，开展消防、逃生的预演，以提高学生防范、处理能力，并善于利用发生的安全事故教育学生，防患于未然。 \n
第三章 安全管理 \n
第八条 学校要做好学生日常安全管理工作，加强安全防范，建立和健全规章制度，严格管理。要把安全教育及管理工作纳入领导任期的责任目标，落实到各部门、各学院年级及各班级。 \n
第九条 学生宿舍安全工作领导小组办公室，具体组织实施安全教育及管理工作，定期或不定期地组织对学生宿舍进行安全用电、防火检查。学工部、研工部负责对学生宿舍进行违章电器检查，并对学生进行安全教育与违规处罚，物业管理中心负责对各学生宿舍楼栋进行日常的安全巡视，保卫处负责督查，对较严重的违规行为及时向学生宿舍安全工作领导小组报告，把隐患消除在萌芽状态。 \n
第十条 学生应严格遵守国家法律、法规，严格遵守宿舍管理的规定，自觉维护宿舍的安全，提高自我管理能力，注意自身的人身和财物安全，听从指挥，服从管理，防止各种事故的发生。 \n
第四章 安全规定 \n
第十一条 学生宿舍内禁止使用以下电器：电炉、电磁炉、电熨斗、电水壶、电热杯、热得快、电梳、电饭煲、电热毯、干鞋器、电怀炉、洗衣机、60Ｗ以上的灯泡，以及未经学校批准的其它电器。一经发现，一律予以没收并通报学院。 \n
第十二条 禁止使用以下各种火源：蜡烛、酒精炉、煤炉、木炭火锅、液化气灶具以及未经学校批准的其它火源。 \n
第十三条 寝室内严禁私拉乱接，严禁私自更换保险，严禁私自短接负载识别器，严禁从路灯等其它电源上接线用电，严禁从公共水房、厕所、走道、洗衣房等处取电用电，室内正常用电（如收录机、电脑、台灯、充电器等）只能从学校统一安装的插座上取电，严禁学生个人安装接线板。学生宿舍实行恶性负载智能识别控制和分时限流控制。 \n
第十四条 不得擅自破坏或拆卸寝室内的照明、电风扇以及学校统一安装的其它强、弱电设施。严禁在供电线路及电器设备上挂衣服、蚊帐和其它装饰物品。 \n
第五章 附 则 \n
第十五条 本规定结合学校其他有关规定执行，以前相关学生宿舍安全管理规定与本规定不相符的，以本规定为准。 \n
第十六条 本规定自2005年9月1日起执行，由学校学生宿舍安全工作领导小组负责解释。\n
</string>
    <string name="three_part">（一）学生未经准假一学期累计旷课24学时的，给予警告处分；累计旷课30学时的，给予严重警告处分；累计旷课36学时的，给予记过处分；累计旷课48学时的，给予留校察看处分； \n
（二）在一学期内因旷课受到纪律处分，经批评教育不改，继续旷课，一学期累计达到90学时的，给予开除学籍处分；\n
    （六）在校期间或外出实习期间违反学校规定到江、河、湖、塘、水库等地游泳的，给予批评教育，情节严重的，给予警告或者严重警告处分； \n
（七）在宿舍及其它公共场所违规用电用火、使用违禁电器的，没收违禁电器，视情节给予警告、严重警告或者记过处分；造成火灾，损失在2000元以下（含2000元）的，给予留校察看处分；损失在2000元以上或者导致人身伤亡的，给予开除学籍处分；构成犯罪的，依法承担刑事责任；\n
    （一）利用计算机、网络新媒体故意发布和传播危害国家和公共安全、破坏公共秩序和社会稳定、违反社会公德、蓄意诽谤他人、公开他人隐私、欺诈他人等信息的，给予记过、留校察看或者开除学籍处分； \n</string>
</resources>