<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="success.liang.com.success.activity.search"
    android:id="@+id/contents">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/promt_name"
        android:singleLine="true"
        android:padding="8dp"/>
    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/number"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/promt_number"
        android:padding="8dp"
        android:maxLength="10"/>
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/phonenumber"
            android:layout_below="@id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="输入电话号码"
            android:inputType="number"
            android:singleLine="true"
            android:padding="8dp"/>
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/ID"
            android:layout_below="@id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="输入身份证号码"
            android:singleLine="true"
            android:padding="8dp"/>
    <Spinner
        android:layout_marginTop="16dp"
        android:layout_below="@id/ID"
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>
    <Spinner
        android:layout_marginTop="16dp"
        android:id="@+id/classname"
        android:layout_below="@id/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>
    <Spinner
        android:layout_marginTop="16dp"
        android:id="@+id/year"
        android:layout_below="@id/classname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Spinner>
        <Spinner
            android:layout_marginTop="16dp"
            android:id="@+id/people"
            android:layout_below="@id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></Spinner>
        <Spinner
            android:layout_marginTop="16dp"
            android:id="@+id/party"
            android:layout_below="@id/people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></Spinner>


    <Button
        android:id="@+id/search"
        android:layout_marginTop="48dp"
        android:layout_below="@id/party"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="16dp"
        android:textColor="#dedede"
        android:background="@drawable/selector"/>
    </RelativeLayout>

    </ScrollView>
</RelativeLayout>
